// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded with kql filter to force metrics-based UI has the correct throughput 1`] = `
Array [
  Object {
    "x": 1627973400000,
    "y": 4,
  },
  Object {
    "x": 1627973460000,
    "y": 2,
  },
  Object {
    "x": 1627973520000,
    "y": 3,
  },
  Object {
    "x": 1627973580000,
    "y": 11,
  },
  Object {
    "x": 1627973640000,
    "y": 4,
  },
  Object {
    "x": 1627973700000,
    "y": 6,
  },
  Object {
    "x": 1627973760000,
    "y": 6,
  },
  Object {
    "x": 1627973820000,
    "y": 11,
  },
  Object {
    "x": 1627973880000,
    "y": 10,
  },
  Object {
    "x": 1627973940000,
    "y": 10,
  },
  Object {
    "x": 1627974000000,
    "y": 12,
  },
  Object {
    "x": 1627974060000,
    "y": 13,
  },
  Object {
    "x": 1627974120000,
    "y": 8,
  },
  Object {
    "x": 1627974180000,
    "y": 10,
  },
  Object {
    "x": 1627974240000,
    "y": 13,
  },
  Object {
    "x": 1627974300000,
    "y": 9,
  },
  Object {
    "x": 1627974360000,
    "y": 0,
  },
  Object {
    "x": 1627974420000,
    "y": 4,
  },
  Object {
    "x": 1627974480000,
    "y": 5,
  },
  Object {
    "x": 1627974540000,
    "y": 6,
  },
  Object {
    "x": 1627974600000,
    "y": 8,
  },
  Object {
    "x": 1627974660000,
    "y": 5,
  },
  Object {
    "x": 1627974720000,
    "y": 5,
  },
  Object {
    "x": 1627974780000,
    "y": 7,
  },
  Object {
    "x": 1627974840000,
    "y": 2,
  },
  Object {
    "x": 1627974900000,
    "y": 15,
  },
  Object {
    "x": 1627974960000,
    "y": 3,
  },
  Object {
    "x": 1627975020000,
    "y": 8,
  },
  Object {
    "x": 1627975080000,
    "y": 13,
  },
  Object {
    "x": 1627975140000,
    "y": 11,
  },
  Object {
    "x": 1627975200000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded with kql filter to force transaction-based UI calculate throughput per minute because of time range has the correct throughput 1`] = `
Array [
  Object {
    "x": 1627970400000,
    "y": 1.16666666666667,
  },
  Object {
    "x": 1627974000000,
    "y": 2.61666666666667,
  },
  Object {
    "x": 1627977600000,
    "y": 0,
  },
  Object {
    "x": 1627981200000,
    "y": 0,
  },
  Object {
    "x": 1627984800000,
    "y": 0,
  },
  Object {
    "x": 1627988400000,
    "y": 0,
  },
  Object {
    "x": 1627992000000,
    "y": 0,
  },
  Object {
    "x": 1627995600000,
    "y": 0,
  },
  Object {
    "x": 1627999200000,
    "y": 0,
  },
  Object {
    "x": 1628002800000,
    "y": 0,
  },
  Object {
    "x": 1628006400000,
    "y": 0,
  },
  Object {
    "x": 1628010000000,
    "y": 0,
  },
  Object {
    "x": 1628013600000,
    "y": 0,
  },
  Object {
    "x": 1628017200000,
    "y": 0,
  },
  Object {
    "x": 1628020800000,
    "y": 0,
  },
  Object {
    "x": 1628024400000,
    "y": 0,
  },
  Object {
    "x": 1628028000000,
    "y": 0,
  },
  Object {
    "x": 1628031600000,
    "y": 0,
  },
  Object {
    "x": 1628035200000,
    "y": 0,
  },
  Object {
    "x": 1628038800000,
    "y": 0,
  },
  Object {
    "x": 1628042400000,
    "y": 0,
  },
  Object {
    "x": 1628046000000,
    "y": 0,
  },
  Object {
    "x": 1628049600000,
    "y": 0,
  },
  Object {
    "x": 1628053200000,
    "y": 0,
  },
  Object {
    "x": 1628056800000,
    "y": 0,
  },
  Object {
    "x": 1628060400000,
    "y": 0,
  },
  Object {
    "x": 1628064000000,
    "y": 0,
  },
  Object {
    "x": 1628067600000,
    "y": 0,
  },
  Object {
    "x": 1628071200000,
    "y": 0,
  },
  Object {
    "x": 1628074800000,
    "y": 0,
  },
  Object {
    "x": 1628078400000,
    "y": 0,
  },
  Object {
    "x": 1628082000000,
    "y": 0,
  },
  Object {
    "x": 1628085600000,
    "y": 0,
  },
  Object {
    "x": 1628089200000,
    "y": 0,
  },
  Object {
    "x": 1628092800000,
    "y": 0,
  },
  Object {
    "x": 1628096400000,
    "y": 0,
  },
  Object {
    "x": 1628100000000,
    "y": 0,
  },
  Object {
    "x": 1628103600000,
    "y": 0,
  },
  Object {
    "x": 1628107200000,
    "y": 0,
  },
  Object {
    "x": 1628110800000,
    "y": 0,
  },
  Object {
    "x": 1628114400000,
    "y": 0,
  },
  Object {
    "x": 1628118000000,
    "y": 0,
  },
  Object {
    "x": 1628121600000,
    "y": 0,
  },
  Object {
    "x": 1628125200000,
    "y": 0,
  },
  Object {
    "x": 1628128800000,
    "y": 0,
  },
  Object {
    "x": 1628132400000,
    "y": 0,
  },
  Object {
    "x": 1628136000000,
    "y": 0,
  },
  Object {
    "x": 1628139600000,
    "y": 0,
  },
  Object {
    "x": 1628143200000,
    "y": 0,
  },
  Object {
    "x": 1628146800000,
    "y": 0,
  },
  Object {
    "x": 1628150400000,
    "y": 0,
  },
  Object {
    "x": 1628154000000,
    "y": 0,
  },
  Object {
    "x": 1628157600000,
    "y": 0,
  },
  Object {
    "x": 1628161200000,
    "y": 0,
  },
  Object {
    "x": 1628164800000,
    "y": 0,
  },
  Object {
    "x": 1628168400000,
    "y": 0,
  },
  Object {
    "x": 1628172000000,
    "y": 0,
  },
  Object {
    "x": 1628175600000,
    "y": 0,
  },
  Object {
    "x": 1628179200000,
    "y": 0,
  },
  Object {
    "x": 1628182800000,
    "y": 0,
  },
  Object {
    "x": 1628186400000,
    "y": 0,
  },
  Object {
    "x": 1628190000000,
    "y": 0,
  },
  Object {
    "x": 1628193600000,
    "y": 0,
  },
  Object {
    "x": 1628197200000,
    "y": 0,
  },
  Object {
    "x": 1628200800000,
    "y": 0,
  },
  Object {
    "x": 1628204400000,
    "y": 0,
  },
  Object {
    "x": 1628208000000,
    "y": 0,
  },
  Object {
    "x": 1628211600000,
    "y": 0,
  },
  Object {
    "x": 1628215200000,
    "y": 0,
  },
  Object {
    "x": 1628218800000,
    "y": 0,
  },
  Object {
    "x": 1628222400000,
    "y": 0,
  },
  Object {
    "x": 1628226000000,
    "y": 0,
  },
  Object {
    "x": 1628229600000,
    "y": 0,
  },
  Object {
    "x": 1628233200000,
    "y": 0,
  },
  Object {
    "x": 1628236800000,
    "y": 0,
  },
  Object {
    "x": 1628240400000,
    "y": 0,
  },
  Object {
    "x": 1628244000000,
    "y": 0,
  },
  Object {
    "x": 1628247600000,
    "y": 0,
  },
  Object {
    "x": 1628251200000,
    "y": 0,
  },
  Object {
    "x": 1628254800000,
    "y": 0,
  },
  Object {
    "x": 1628258400000,
    "y": 0,
  },
  Object {
    "x": 1628262000000,
    "y": 0,
  },
  Object {
    "x": 1628265600000,
    "y": 0,
  },
  Object {
    "x": 1628269200000,
    "y": 0,
  },
  Object {
    "x": 1628272800000,
    "y": 0,
  },
  Object {
    "x": 1628276400000,
    "y": 0,
  },
  Object {
    "x": 1628280000000,
    "y": 0,
  },
  Object {
    "x": 1628283600000,
    "y": 0,
  },
  Object {
    "x": 1628287200000,
    "y": 0,
  },
  Object {
    "x": 1628290800000,
    "y": 0,
  },
  Object {
    "x": 1628294400000,
    "y": 0,
  },
  Object {
    "x": 1628298000000,
    "y": 0,
  },
  Object {
    "x": 1628301600000,
    "y": 0,
  },
  Object {
    "x": 1628305200000,
    "y": 0,
  },
  Object {
    "x": 1628308800000,
    "y": 0,
  },
  Object {
    "x": 1628312400000,
    "y": 0,
  },
  Object {
    "x": 1628316000000,
    "y": 0,
  },
  Object {
    "x": 1628319600000,
    "y": 0,
  },
  Object {
    "x": 1628323200000,
    "y": 0,
  },
  Object {
    "x": 1628326800000,
    "y": 0,
  },
  Object {
    "x": 1628330400000,
    "y": 0,
  },
  Object {
    "x": 1628334000000,
    "y": 0,
  },
  Object {
    "x": 1628337600000,
    "y": 0,
  },
  Object {
    "x": 1628341200000,
    "y": 0,
  },
  Object {
    "x": 1628344800000,
    "y": 0,
  },
  Object {
    "x": 1628348400000,
    "y": 0,
  },
  Object {
    "x": 1628352000000,
    "y": 0,
  },
  Object {
    "x": 1628355600000,
    "y": 0,
  },
  Object {
    "x": 1628359200000,
    "y": 0,
  },
  Object {
    "x": 1628362800000,
    "y": 0,
  },
  Object {
    "x": 1628366400000,
    "y": 0,
  },
  Object {
    "x": 1628370000000,
    "y": 0,
  },
  Object {
    "x": 1628373600000,
    "y": 0,
  },
  Object {
    "x": 1628377200000,
    "y": 0,
  },
  Object {
    "x": 1628380800000,
    "y": 0,
  },
  Object {
    "x": 1628384400000,
    "y": 0,
  },
  Object {
    "x": 1628388000000,
    "y": 0,
  },
  Object {
    "x": 1628391600000,
    "y": 0,
  },
  Object {
    "x": 1628395200000,
    "y": 0,
  },
  Object {
    "x": 1628398800000,
    "y": 0,
  },
  Object {
    "x": 1628402400000,
    "y": 0,
  },
  Object {
    "x": 1628406000000,
    "y": 0,
  },
  Object {
    "x": 1628409600000,
    "y": 0,
  },
  Object {
    "x": 1628413200000,
    "y": 0,
  },
  Object {
    "x": 1628416800000,
    "y": 0,
  },
  Object {
    "x": 1628420400000,
    "y": 0,
  },
  Object {
    "x": 1628424000000,
    "y": 0,
  },
  Object {
    "x": 1628427600000,
    "y": 0,
  },
  Object {
    "x": 1628431200000,
    "y": 0,
  },
  Object {
    "x": 1628434800000,
    "y": 0,
  },
  Object {
    "x": 1628438400000,
    "y": 0,
  },
  Object {
    "x": 1628442000000,
    "y": 0,
  },
  Object {
    "x": 1628445600000,
    "y": 0,
  },
  Object {
    "x": 1628449200000,
    "y": 0,
  },
  Object {
    "x": 1628452800000,
    "y": 0,
  },
  Object {
    "x": 1628456400000,
    "y": 0,
  },
  Object {
    "x": 1628460000000,
    "y": 0,
  },
  Object {
    "x": 1628463600000,
    "y": 0,
  },
  Object {
    "x": 1628467200000,
    "y": 0,
  },
  Object {
    "x": 1628470800000,
    "y": 0,
  },
  Object {
    "x": 1628474400000,
    "y": 0,
  },
  Object {
    "x": 1628478000000,
    "y": 0,
  },
  Object {
    "x": 1628481600000,
    "y": 0,
  },
  Object {
    "x": 1628485200000,
    "y": 0,
  },
  Object {
    "x": 1628488800000,
    "y": 0,
  },
  Object {
    "x": 1628492400000,
    "y": 0,
  },
  Object {
    "x": 1628496000000,
    "y": 0,
  },
  Object {
    "x": 1628499600000,
    "y": 0,
  },
  Object {
    "x": 1628503200000,
    "y": 0,
  },
  Object {
    "x": 1628506800000,
    "y": 0,
  },
  Object {
    "x": 1628510400000,
    "y": 0,
  },
  Object {
    "x": 1628514000000,
    "y": 0,
  },
  Object {
    "x": 1628517600000,
    "y": 0,
  },
  Object {
    "x": 1628521200000,
    "y": 0,
  },
  Object {
    "x": 1628524800000,
    "y": 0,
  },
  Object {
    "x": 1628528400000,
    "y": 0,
  },
  Object {
    "x": 1628532000000,
    "y": 0,
  },
  Object {
    "x": 1628535600000,
    "y": 0,
  },
  Object {
    "x": 1628539200000,
    "y": 0,
  },
  Object {
    "x": 1628542800000,
    "y": 0,
  },
  Object {
    "x": 1628546400000,
    "y": 0,
  },
  Object {
    "x": 1628550000000,
    "y": 0,
  },
  Object {
    "x": 1628553600000,
    "y": 0,
  },
  Object {
    "x": 1628557200000,
    "y": 0,
  },
  Object {
    "x": 1628560800000,
    "y": 0,
  },
  Object {
    "x": 1628564400000,
    "y": 0,
  },
  Object {
    "x": 1628568000000,
    "y": 0,
  },
  Object {
    "x": 1628571600000,
    "y": 0,
  },
  Object {
    "x": 1628575200000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded with kql filter to force transaction-based UI calculate throughput per second because of time range has the correct throughput 1`] = `
Array [
  Object {
    "x": 1627973400000,
    "y": 0.0333333333333333,
  },
  Object {
    "x": 1627973430000,
    "y": 0.0333333333333333,
  },
  Object {
    "x": 1627973460000,
    "y": 0.0333333333333333,
  },
  Object {
    "x": 1627973490000,
    "y": 0.1,
  },
  Object {
    "x": 1627973520000,
    "y": 0.0333333333333333,
  },
  Object {
    "x": 1627973550000,
    "y": 0.266666666666667,
  },
  Object {
    "x": 1627973580000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627973610000,
    "y": 0.0333333333333333,
  },
  Object {
    "x": 1627973640000,
    "y": 0.0333333333333333,
  },
  Object {
    "x": 1627973670000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627973700000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627973730000,
    "y": 0.1,
  },
  Object {
    "x": 1627973760000,
    "y": 0.2,
  },
  Object {
    "x": 1627973790000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627973820000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627973850000,
    "y": 0.1,
  },
  Object {
    "x": 1627973880000,
    "y": 0.266666666666667,
  },
  Object {
    "x": 1627973910000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627973940000,
    "y": 0.1,
  },
  Object {
    "x": 1627973970000,
    "y": 0.2,
  },
  Object {
    "x": 1627974000000,
    "y": 0.266666666666667,
  },
  Object {
    "x": 1627974030000,
    "y": 0.266666666666667,
  },
  Object {
    "x": 1627974060000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627974090000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627974120000,
    "y": 0.266666666666667,
  },
  Object {
    "x": 1627974150000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627974180000,
    "y": 0.233333333333333,
  },
  Object {
    "x": 1627974210000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627974240000,
    "y": 0.233333333333333,
  },
  Object {
    "x": 1627974270000,
    "y": 0.1,
  },
  Object {
    "x": 1627974300000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627974330000,
    "y": 0,
  },
  Object {
    "x": 1627974360000,
    "y": 0,
  },
  Object {
    "x": 1627974390000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627974420000,
    "y": 0.1,
  },
  Object {
    "x": 1627974450000,
    "y": 0.1,
  },
  Object {
    "x": 1627974480000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627974510000,
    "y": 0.1,
  },
  Object {
    "x": 1627974540000,
    "y": 0.1,
  },
  Object {
    "x": 1627974570000,
    "y": 0.1,
  },
  Object {
    "x": 1627974600000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627974630000,
    "y": 0.0333333333333333,
  },
  Object {
    "x": 1627974660000,
    "y": 0.1,
  },
  Object {
    "x": 1627974690000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627974720000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627974750000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627974780000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627974810000,
    "y": 0.0333333333333333,
  },
  Object {
    "x": 1627974840000,
    "y": 0.1,
  },
  Object {
    "x": 1627974870000,
    "y": 0.1,
  },
  Object {
    "x": 1627974900000,
    "y": 0.3,
  },
  Object {
    "x": 1627974930000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627974960000,
    "y": 0.0333333333333333,
  },
  Object {
    "x": 1627974990000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627975020000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627975050000,
    "y": 0.2,
  },
  Object {
    "x": 1627975080000,
    "y": 0.3,
  },
  Object {
    "x": 1627975110000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627975140000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627975170000,
    "y": 0.2,
  },
  Object {
    "x": 1627975200000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded with time comparison has the correct throughput in tpm 1`] = `
Object {
  "currentPeriod": Array [
    Object {
      "x": 1627974310000,
      "y": 0,
    },
    Object {
      "x": 1627974320000,
      "y": 0,
    },
    Object {
      "x": 1627974330000,
      "y": 0,
    },
    Object {
      "x": 1627974340000,
      "y": 0,
    },
    Object {
      "x": 1627974350000,
      "y": 0,
    },
    Object {
      "x": 1627974360000,
      "y": 0,
    },
    Object {
      "x": 1627974370000,
      "y": 0,
    },
    Object {
      "x": 1627974380000,
      "y": 0,
    },
    Object {
      "x": 1627974390000,
      "y": 0,
    },
    Object {
      "x": 1627974400000,
      "y": 0,
    },
    Object {
      "x": 1627974410000,
      "y": 0.2,
    },
    Object {
      "x": 1627974420000,
      "y": 0.2,
    },
    Object {
      "x": 1627974430000,
      "y": 0,
    },
    Object {
      "x": 1627974440000,
      "y": 0.1,
    },
    Object {
      "x": 1627974450000,
      "y": 0.2,
    },
    Object {
      "x": 1627974460000,
      "y": 0.1,
    },
    Object {
      "x": 1627974470000,
      "y": 0,
    },
    Object {
      "x": 1627974480000,
      "y": 0.1,
    },
    Object {
      "x": 1627974490000,
      "y": 0,
    },
    Object {
      "x": 1627974500000,
      "y": 0.1,
    },
    Object {
      "x": 1627974510000,
      "y": 0,
    },
    Object {
      "x": 1627974520000,
      "y": 0.3,
    },
    Object {
      "x": 1627974530000,
      "y": 0,
    },
    Object {
      "x": 1627974540000,
      "y": 0.2,
    },
    Object {
      "x": 1627974550000,
      "y": 0.1,
    },
    Object {
      "x": 1627974560000,
      "y": 0,
    },
    Object {
      "x": 1627974570000,
      "y": 0.3,
    },
    Object {
      "x": 1627974580000,
      "y": 0,
    },
    Object {
      "x": 1627974590000,
      "y": 0,
    },
    Object {
      "x": 1627974600000,
      "y": 0,
    },
    Object {
      "x": 1627974610000,
      "y": 0.3,
    },
    Object {
      "x": 1627974620000,
      "y": 0.2,
    },
    Object {
      "x": 1627974630000,
      "y": 0,
    },
    Object {
      "x": 1627974640000,
      "y": 0,
    },
    Object {
      "x": 1627974650000,
      "y": 0.1,
    },
    Object {
      "x": 1627974660000,
      "y": 0.1,
    },
    Object {
      "x": 1627974670000,
      "y": 0.2,
    },
    Object {
      "x": 1627974680000,
      "y": 0,
    },
    Object {
      "x": 1627974690000,
      "y": 0.1,
    },
    Object {
      "x": 1627974700000,
      "y": 0,
    },
    Object {
      "x": 1627974710000,
      "y": 0.1,
    },
    Object {
      "x": 1627974720000,
      "y": 0,
    },
    Object {
      "x": 1627974730000,
      "y": 0.3,
    },
    Object {
      "x": 1627974740000,
      "y": 0.1,
    },
    Object {
      "x": 1627974750000,
      "y": 0.3,
    },
    Object {
      "x": 1627974760000,
      "y": 0,
    },
    Object {
      "x": 1627974770000,
      "y": 0.2,
    },
    Object {
      "x": 1627974780000,
      "y": 0.1,
    },
    Object {
      "x": 1627974790000,
      "y": 0.1,
    },
    Object {
      "x": 1627974800000,
      "y": 0,
    },
    Object {
      "x": 1627974810000,
      "y": 0.1,
    },
    Object {
      "x": 1627974820000,
      "y": 0,
    },
    Object {
      "x": 1627974830000,
      "y": 0,
    },
    Object {
      "x": 1627974840000,
      "y": 0,
    },
    Object {
      "x": 1627974850000,
      "y": 0.2,
    },
    Object {
      "x": 1627974860000,
      "y": 0.1,
    },
    Object {
      "x": 1627974870000,
      "y": 0.2,
    },
    Object {
      "x": 1627974880000,
      "y": 0,
    },
    Object {
      "x": 1627974890000,
      "y": 0.1,
    },
    Object {
      "x": 1627974900000,
      "y": 0.5,
    },
    Object {
      "x": 1627974910000,
      "y": 0.4,
    },
    Object {
      "x": 1627974920000,
      "y": 0,
    },
    Object {
      "x": 1627974930000,
      "y": 0.2,
    },
    Object {
      "x": 1627974940000,
      "y": 0,
    },
    Object {
      "x": 1627974950000,
      "y": 0,
    },
    Object {
      "x": 1627974960000,
      "y": 0,
    },
    Object {
      "x": 1627974970000,
      "y": 0.1,
    },
    Object {
      "x": 1627974980000,
      "y": 0,
    },
    Object {
      "x": 1627974990000,
      "y": 0.3,
    },
    Object {
      "x": 1627975000000,
      "y": 0,
    },
    Object {
      "x": 1627975010000,
      "y": 0.1,
    },
    Object {
      "x": 1627975020000,
      "y": 0.3,
    },
    Object {
      "x": 1627975030000,
      "y": 0.1,
    },
    Object {
      "x": 1627975040000,
      "y": 0,
    },
    Object {
      "x": 1627975050000,
      "y": 0.1,
    },
    Object {
      "x": 1627975060000,
      "y": 0.1,
    },
    Object {
      "x": 1627975070000,
      "y": 0.4,
    },
    Object {
      "x": 1627975080000,
      "y": 0.3,
    },
    Object {
      "x": 1627975090000,
      "y": 0.3,
    },
    Object {
      "x": 1627975100000,
      "y": 0.3,
    },
    Object {
      "x": 1627975110000,
      "y": 0.3,
    },
    Object {
      "x": 1627975120000,
      "y": 0.1,
    },
    Object {
      "x": 1627975130000,
      "y": 0.1,
    },
    Object {
      "x": 1627975140000,
      "y": 0.1,
    },
    Object {
      "x": 1627975150000,
      "y": 0.3,
    },
    Object {
      "x": 1627975160000,
      "y": 0,
    },
    Object {
      "x": 1627975170000,
      "y": 0.1,
    },
    Object {
      "x": 1627975180000,
      "y": 0.4,
    },
    Object {
      "x": 1627975190000,
      "y": 0.1,
    },
    Object {
      "x": 1627975200000,
      "y": 0,
    },
    Object {
      "x": 1627975210000,
      "y": 0,
    },
  ],
  "previousPeriod": Array [
    Object {
      "x": 1627974310000,
      "y": 0,
    },
    Object {
      "x": 1627974320000,
      "y": 0.1,
    },
    Object {
      "x": 1627974330000,
      "y": 0,
    },
    Object {
      "x": 1627974340000,
      "y": 0,
    },
    Object {
      "x": 1627974350000,
      "y": 0.1,
    },
    Object {
      "x": 1627974360000,
      "y": 0.1,
    },
    Object {
      "x": 1627974370000,
      "y": 0,
    },
    Object {
      "x": 1627974380000,
      "y": 0,
    },
    Object {
      "x": 1627974390000,
      "y": 0.2,
    },
    Object {
      "x": 1627974400000,
      "y": 0,
    },
    Object {
      "x": 1627974410000,
      "y": 0.1,
    },
    Object {
      "x": 1627974420000,
      "y": 0,
    },
    Object {
      "x": 1627974430000,
      "y": 0.1,
    },
    Object {
      "x": 1627974440000,
      "y": 0,
    },
    Object {
      "x": 1627974450000,
      "y": 0.7,
    },
    Object {
      "x": 1627974460000,
      "y": 0.1,
    },
    Object {
      "x": 1627974470000,
      "y": 0,
    },
    Object {
      "x": 1627974480000,
      "y": 0.2,
    },
    Object {
      "x": 1627974490000,
      "y": 0.2,
    },
    Object {
      "x": 1627974500000,
      "y": 0,
    },
    Object {
      "x": 1627974510000,
      "y": 0,
    },
    Object {
      "x": 1627974520000,
      "y": 0,
    },
    Object {
      "x": 1627974530000,
      "y": 0.1,
    },
    Object {
      "x": 1627974540000,
      "y": 0,
    },
    Object {
      "x": 1627974550000,
      "y": 0.1,
    },
    Object {
      "x": 1627974560000,
      "y": 0,
    },
    Object {
      "x": 1627974570000,
      "y": 0.1,
    },
    Object {
      "x": 1627974580000,
      "y": 0,
    },
    Object {
      "x": 1627974590000,
      "y": 0.1,
    },
    Object {
      "x": 1627974600000,
      "y": 0.2,
    },
    Object {
      "x": 1627974610000,
      "y": 0.2,
    },
    Object {
      "x": 1627974620000,
      "y": 0,
    },
    Object {
      "x": 1627974630000,
      "y": 0,
    },
    Object {
      "x": 1627974640000,
      "y": 0.1,
    },
    Object {
      "x": 1627974650000,
      "y": 0.2,
    },
    Object {
      "x": 1627974660000,
      "y": 0.2,
    },
    Object {
      "x": 1627974670000,
      "y": 0.2,
    },
    Object {
      "x": 1627974680000,
      "y": 0.2,
    },
    Object {
      "x": 1627974690000,
      "y": 0.1,
    },
    Object {
      "x": 1627974700000,
      "y": 0.1,
    },
    Object {
      "x": 1627974710000,
      "y": 0.2,
    },
    Object {
      "x": 1627974720000,
      "y": 0.4,
    },
    Object {
      "x": 1627974730000,
      "y": 0,
    },
    Object {
      "x": 1627974740000,
      "y": 0.1,
    },
    Object {
      "x": 1627974750000,
      "y": 0.1,
    },
    Object {
      "x": 1627974760000,
      "y": 0.1,
    },
    Object {
      "x": 1627974770000,
      "y": 0.1,
    },
    Object {
      "x": 1627974780000,
      "y": 0.1,
    },
    Object {
      "x": 1627974790000,
      "y": 0.5,
    },
    Object {
      "x": 1627974800000,
      "y": 0.2,
    },
    Object {
      "x": 1627974810000,
      "y": 0.4,
    },
    Object {
      "x": 1627974820000,
      "y": 0.1,
    },
    Object {
      "x": 1627974830000,
      "y": 0,
    },
    Object {
      "x": 1627974840000,
      "y": 0.1,
    },
    Object {
      "x": 1627974850000,
      "y": 0.2,
    },
    Object {
      "x": 1627974860000,
      "y": 0,
    },
    Object {
      "x": 1627974870000,
      "y": 0.2,
    },
    Object {
      "x": 1627974880000,
      "y": 0,
    },
    Object {
      "x": 1627974890000,
      "y": 0.4,
    },
    Object {
      "x": 1627974900000,
      "y": 0.2,
    },
    Object {
      "x": 1627974910000,
      "y": 0.4,
    },
    Object {
      "x": 1627974920000,
      "y": 0.2,
    },
    Object {
      "x": 1627974930000,
      "y": 0.1,
    },
    Object {
      "x": 1627974940000,
      "y": 0.5,
    },
    Object {
      "x": 1627974950000,
      "y": 0.2,
    },
    Object {
      "x": 1627974960000,
      "y": 0.3,
    },
    Object {
      "x": 1627974970000,
      "y": 0.1,
    },
    Object {
      "x": 1627974980000,
      "y": 0,
    },
    Object {
      "x": 1627974990000,
      "y": 0.1,
    },
    Object {
      "x": 1627975000000,
      "y": 0.1,
    },
    Object {
      "x": 1627975010000,
      "y": 0,
    },
    Object {
      "x": 1627975020000,
      "y": 0.3,
    },
    Object {
      "x": 1627975030000,
      "y": 0.3,
    },
    Object {
      "x": 1627975040000,
      "y": 0.2,
    },
    Object {
      "x": 1627975050000,
      "y": 0.1,
    },
    Object {
      "x": 1627975060000,
      "y": 0.1,
    },
    Object {
      "x": 1627975070000,
      "y": 0,
    },
    Object {
      "x": 1627975080000,
      "y": 0.4,
    },
    Object {
      "x": 1627975090000,
      "y": 0.1,
    },
    Object {
      "x": 1627975100000,
      "y": 0.2,
    },
    Object {
      "x": 1627975110000,
      "y": 0.1,
    },
    Object {
      "x": 1627975120000,
      "y": 0.1,
    },
    Object {
      "x": 1627975130000,
      "y": 0.3,
    },
    Object {
      "x": 1627975140000,
      "y": 0.3,
    },
    Object {
      "x": 1627975150000,
      "y": 0.4,
    },
    Object {
      "x": 1627975160000,
      "y": 0,
    },
    Object {
      "x": 1627975170000,
      "y": 0,
    },
    Object {
      "x": 1627975180000,
      "y": 0.2,
    },
    Object {
      "x": 1627975190000,
      "y": 0.1,
    },
    Object {
      "x": 1627975200000,
      "y": 0.5,
    },
    Object {
      "x": 1627975210000,
      "y": 0,
    },
  ],
  "throughputUnit": "second",
}
`;
